@@ -1,3 +1,7 @@
+procps-3.1.14 --> procps-3.1.15
+
+install to /lib64 if it exists
+
 procps-3.1.13 --> procps-3.1.14
 
 top: displays on more genuine serial terminals
